--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,247 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+section .container {
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.app {
+	font-size: 16px;
+	font-family: "Helvetica Neue", Arial, Tahoma, Verdana;
+	color: #000;
+	border: 1px solid #ccc;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
+	margin: 0 15px;
 }
+
+.days {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: stretch;
+	-webkit-align-items: stretch;
+	-moz-box-align: stretch;
+	-ms-flex-align: stretch;
+	align-items: stretch;
+	-webkit-box-pack: start;
+	-webkit-justify-content: flex-start;
+	-moz-box-pack: start;
+	-ms-flex-pack: start;
+	justify-content: flex-start;
+	overflow: hidden;
+	overflow-x: auto;
+}
+
+.days .day {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: stretch;
+	-webkit-align-items: stretch;
+	-moz-box-align: stretch;
+	-ms-flex-align: stretch;
+	align-items: stretch;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-moz-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+	-moz-box-orient: vertical;
+	-moz-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	-webkit-box-flex: 1;
+	-webkit-flex: 1 1 auto;
+	-moz-box-flex: 1;
+	-ms-flex: 1 1 auto;
+	flex: 1 1 auto;
+	padding: 0 10px;
+	margin: 0 5px;
+	-webkit-border-top-left-radius: 8px;
+	-moz-border-radius-topleft: 8px;
+	border-top-left-radius: 8px;
+	-webkit-border-top-right-radius: 8px;
+	-moz-border-radius-topright: 8px;
+	border-top-right-radius: 8px;
+	cursor: pointer;
+}
+
+.days .day:hover {
+	background-color: #f5f5f5;
+}
+
+.days .day--selected {
+	background-color: #f5f5f5;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#ff8100), color-stop(170%, #f9c48e));
+	background-image: -webkit-linear-gradient(top, #ff8100 0%, #f9c48e 170%);
+	background-image: -moz-linear-gradient(top, #ff8100 0%, #f9c48e 170%);
+	background-image: -o-linear-gradient(top, #ff8100 0%, #f9c48e 170%);
+	background-image: linear-gradient(180deg, #ff8100 0%, #f9c48e 170%);
+}
+
+.days .day:first-of-type {
+	border-left: 0;
+	margin-left: 0;
+}
+
+.days .day:last-of-type {
+	border-right: 0;
+	margin-right: 0;
+}
+
+.days .day > * {
+	margin: 10px 0;
+	text-align: center;
+}
+
+.days .day__name {
+	font-weight: 600;
+}
+
+.days .day .temp {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+	-moz-box-orient: vertical;
+	-moz-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
+}
+
+.graph {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: stretch;
+	-webkit-align-items: stretch;
+	-moz-box-align: stretch;
+	-ms-flex-align: stretch;
+	align-items: stretch;
+	-webkit-box-pack: start;
+	-webkit-justify-content: flex-start;
+	-moz-box-pack: start;
+	-ms-flex-pack: start;
+	justify-content: flex-start;
+	height: 300px;
+	-webkit-border-bottom-left-radius: 8px;
+	-moz-border-radius-bottomleft: 8px;
+	border-bottom-left-radius: 8px;
+	-webkit-border-bottom-right-radius: 8px;
+	-moz-border-radius-bottomright: 8px;
+	border-bottom-right-radius: 8px;
+	overflow: hidden;
+	overflow-x: auto;
+}
+
+.graph__item {
+	background-color: #f5f5f5;
+	height: -webkit-calc(100% - 34px);
+	height: -moz-calc(100% - 34px);
+	height: calc(100% - 34px);
+	position: relative;
+	-webkit-box-flex: 1;
+	-webkit-flex: 1 0 50px;
+	-moz-box-flex: 1;
+	-ms-flex: 1 0 50px;
+	flex: 1 0 50px;
+	border-top: 0;
+	border-bottom: 0;
+	margin: 0;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: stretch;
+	-webkit-align-items: stretch;
+	-moz-box-align: stretch;
+	-ms-flex-align: stretch;
+	align-items: stretch;
+	-webkit-box-pack: end;
+	-webkit-justify-content: flex-end;
+	-moz-box-pack: end;
+	-ms-flex-pack: end;
+	justify-content: flex-end;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+	-moz-box-orient: vertical;
+	-moz-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	padding-top: 34px;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#fba853), color-stop(75%, #fff));
+	background-image: -webkit-linear-gradient(top, #fba853 0%, #fff 75%);
+	background-image: -moz-linear-gradient(top, #fba853 0%, #fff 75%);
+	background-image: -o-linear-gradient(top, #fba853 0%, #fff 75%);
+	background-image: linear-gradient(180deg, #fba853 0%, #fff 75%);
+}
+
+.graph__item:first-of-type {
+	border-left: 0;
+}
+
+.graph__item:last-of-type {
+	border-right: 0;
+}
+
+.graph__item .item__hour {
+	margin: 10px 0;
+	text-align: center;
+	font-size: 12px;
+	position: absolute;
+	top: 0px;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+	transform: translateX(-50%);
+}
+
+.graph__item .item__box {
+	position: relative;
+	height: -webkit-calc(100% - 34px);
+	height: -moz-calc(100% - 34px);
+	height: calc(100% - 34px);
+	width: 100%;
+}
+
+.graph__item .item__box__bar {
+	height: 60%;
+	width: 100%;
+	background-color: #ccc;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	margin-top: 34px;
+}
+
+.graph__item .item__box__bar-temp {
+	margin: 10px 0;
+	text-align: center;
+	position: absolute;
+	font-size: 14px;
+	top: -34px;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+	transform: translateX(-50%);
+}
+
