--- a/src/index.css
+++ b/src/index.css
@@ -154,10 +154,10 @@ section .container {
 	height: calc(100% - 34px);
 	position: relative;
 	-webkit-box-flex: 1;
-	-webkit-flex: 1 0 50px;
+	-webkit-flex: 1 0 60px;
 	-moz-box-flex: 1;
-	-ms-flex: 1 0 50px;
-	flex: 1 0 50px;
+	-ms-flex: 1 0 60px;
+	flex: 1 0 60px;
 	border-top: 0;
 	border-bottom: 0;
 	margin: 0;
@@ -222,9 +222,14 @@ section .container {
 }
 
 .graph__item .item__box__bar {
-	height: 60%;
+	min-height: 2px;
 	width: 100%;
-	background-color: #ccc;
+	-webkit-transform: translateY(100%);
+	-moz-transform: translateY(100%);
+	-ms-transform: translateY(100%);
+	-o-transform: translateY(100%);
+	transform: translateY(100%);
+	background-color: #fba853;
 	position: absolute;
 	left: 0;
 	bottom: 0;
@@ -235,7 +240,7 @@ section .container {
 	margin: 10px 0;
 	text-align: center;
 	position: absolute;
-	font-size: 14px;
+	font-size: 12px;
 	top: -34px;
 	left: 50%;
 	-webkit-transform: translateX(-50%);
@@ -243,5 +248,10 @@ section .container {
 	-ms-transform: translateX(-50%);
 	-o-transform: translateX(-50%);
 	transform: translateX(-50%);
+}
+
+.graph__item .item__box__bar-temp:last-of-type {
+	top: auto;
+	bottom: -34px;
 }
 
