--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -86,7 +86,7 @@ section {
     background-color: $graphBg;
     height: calc(100% - 34px);
     position: relative;
-    flex: 1 0 50px;
+    flex: 1 0 60px;
     //border: 1px solid $bordeColor;
     border-top: 0;
     border-bottom: 0;
@@ -124,12 +124,11 @@ section {
         width: 100%;
 
         &__bar {
-          height: 60%;
+          min-height: 2px;
           width: 100%;
-          background-color: #ccc;
+          transform: translateY(100%);
+          background-color:#fba853;
           position: absolute;
-          //left: 50%;
-          //transform: translateX(-50%);
           left: 0;
           bottom: 0;
           margin-top: 34px;
@@ -138,10 +137,14 @@ section {
             margin: 10px 0;
             text-align: center;
             position: absolute;
-            font-size: 14px;
+            font-size: 12px;
             top: -34px;
             left: 50%;
             transform: translateX(-50%);
+            &:last-of-type {
+              top: auto;
+              bottom: -34px;
+            }
           }
         }
       }
